Implementer la boucle de show jouable

--- a/src/RingGeneral.Data/RingGeneral.Data.csproj
+++ b/src/RingGeneral.Data/RingGeneral.Data.csproj
@@ -8,4 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RingGeneral.Core\RingGeneral.Core.csproj" />
+  </ItemGroup>
 </Project>
