Add help specs, tooltips, and codex support

--- a/tests/RingGeneral.Tests/RingGeneral.Tests.csproj
+++ b/tests/RingGeneral.Tests/RingGeneral.Tests.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../src/RingGeneral.Core/RingGeneral.Core.csproj" />
+    <ProjectReference Include="../../src/RingGeneral.Specs/RingGeneral.Specs.csproj" />
   </ItemGroup>
 </Project>
