Add SQLite schema, saves, and DB tooling

--- a/src/RingGeneral.Data/RingGeneral.Data.csproj
+++ b/src/RingGeneral.Data/RingGeneral.Data.csproj
@@ -11,4 +11,9 @@
   <ItemGroup>
     <ProjectReference Include="..\RingGeneral.Core\RingGeneral.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\data\migrations\**\*.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
