Add scouting reports, missions, and specs

--- a/tests/RingGeneral.Tests/RingGeneral.Tests.csproj
+++ b/tests/RingGeneral.Tests/RingGeneral.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../src/RingGeneral.Core/RingGeneral.Core.csproj" />
+    <ProjectReference Include="../../src/RingGeneral.Data/RingGeneral.Data.csproj" />
     <ProjectReference Include="../../src/RingGeneral.Specs/RingGeneral.Specs.csproj" />
   </ItemGroup>
 </Project>
