Fix core model duplicates and references

--- a/src/RingGeneral.Core/RingGeneral.Core.csproj
+++ b/src/RingGeneral.Core/RingGeneral.Core.csproj
@@ -5,4 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>RingGeneral.Core</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\\RingGeneral.Specs\\RingGeneral.Specs.csproj" />
+  </ItemGroup>
 </Project>
